# office_facts

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
office/: settings.py  urls.py
office_facts/: admin.py  apps.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
office_facts/migrations/: 0001_initial.py
