[tool.poetry]
name = "django-office-facts"
version = "0.1.0"
description = ""
authors = ["josephlee3454 <joseph.lee3454@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
djangorestframework = "^3.11.1"
django = "^3.1.1"
djangorestframework_simplejwt = "^4.4.0"
psycopg2 = "^2.8.6"
httpie = "^2.2.0"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
django-cors-headers = "^3.5.0"
psycopg2-binary = "^2.8.6"
environ = "^1.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
